# real-estate-tracker

./: PROJECT_PROGRESS_DOCUMENTATION.md
.cursor/rules/: uxrule.mdc
.github/workflows/: deploy-pwa.yml
BudgetFlip/: .gitignore  CONVERSATION_SUMMARY.md  DEVELOPMENT.md  README.md  docker-compose.yml
BudgetFlip/backend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  start-simple.js  test-api.http  test-api.sh  test-simple.js  tsconfig.json
BudgetFlip/budgetflip/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
real_estate_tracker/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DESKTOP_PLAN.md  DEVELOPER_GUIDE.md  DOCKER_SETUP.md  FAQ.md  FRONTEND_SETUP.md  GIT_WORKFLOW.md  MOBILE_STRATEGY.md  Makefile  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PRD.md  PWA_IMPLEMENTATION.md  QUICK_START.md  README.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  Updated_Test_Project_export.csv  VERSION_CONTROL.md  cli_test_workflow.py  comprehensive_cli_test.py  docker-compose.dev.yml  docker-compose.yml  index.html  netlify.toml  passwd.csv  security_demo.py  simple-tracker.html  sw.js  test_export.csv  validation_suite.py
real_estate_tracker/.github/: pull_request_template.md
real_estate_tracker/backend/: .dockerignore  Dockerfile  Updated_Test_Project_export.csv  passwd.csv  requirements.txt  (+2 more)
real_estate_tracker/desktop/src-tauri/: Cargo.toml  tauri.conf.json
real_estate_tracker/desktop/src-tauri/src/: commands.rs  database.rs  main.rs  python.rs
(+164 files in other folders)
